--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,25 +1,20 @@
-.Save-btn {
-  margin-right: 2rem;
-}
-
-.srd {
+#search-div {
   display: flex;
   justify-content: center;
+  margin-top: 15vh;
 }
 
 #search-input {
-  width: 80%;
-}
-
-#nav-btns {
-  text-align: center;
-  margin-bottom: 1rem;
+  width: 100%;
+  height: 2em;
+  margin-bottom: 2em;
 }
 
 .bookImg {
   height: 100px;
   width: 100px;
   margin-left: 5rem;
+  border: solid 1px gray;
 }
 
 .bookTitle {
